028 Updated Index page
Updated index page with new content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
     <!--
     
-                                                          ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-                                                         ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-                                                         ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-                                                         ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-                                                         ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-                                                          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                                                                    Adrian Bece, 2015.
-                                                        -->
+                                                                      ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+                                                                     ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+                                                                     ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+                                                                     ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+                                                                     ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+                                                                      ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                                                                                Adrian Bece, 2015.
+                                                                    -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -138,99 +138,102 @@
         </div>
         <div class="container-full container-gray">
             <div class="row">
-                <div class="col-lg-5">
-                    <h4 class="centered">Education</h4><hr />
-                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2015.- present </b><br />Microsoft Virutal Academy - various courses</p>
-                    <hr /><p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2013.- present </b><br />Faculty of Electrical Engineering Osijek (Master's degree)</p>
-                    <hr /><p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2013.- 2014. </b><br />E-learning - Mälardalen University, Sweden (Automata theory)</p>
-                    <hr /> <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2013. </b> <br />Earned a degree - Bachelor's degree in computer engineering</p>
-                    <hr /><p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. </b><br />Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
-                    <hr /><p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2010. </b><br />Earned a degree - Electronics technician</p>
-                    <hr /> <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2006.-2010. </b><br />Elektrotehnička i prometna škola Osijek</p>
-                    <hr />
+                <div class="col-lg-6 eduSkills">
+                    <h4 class="centered">Education</h4>
+                    <table class="eduTable pull-left">
+                        <tr>
+                            <td class="eduDate">2015. - present</td>
+                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbspMicrosoft Virutal Academy</b><hr class="noPadding" />
+                                <p>Various courses on HTML, CSS, JQuery, ASP .NET MVC, etc.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">2013. - present</td>
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
+                                <p>Master's degree studies in fields of Process Computing. Computer System design, Automatics, HTML, CSS, Javascript, PHP, MySQL, Robotics, Computer Vision, Computer Networks, etc.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">October 2013. - February 2014.</td>
+                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbspE-learning: Mälardalen University, Sweden</b>
+                                <hr class="noPadding" />
+                                <p>Automation and Formal Languages: Context-free languages, Context sensitive languages, Derivation tree, Push-down automaton and context free grammars, Parsing, Turing machines, etc.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">2013.</td>
+                            <td><b><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
+                                <p>Earned a Bachelor's degree in computer engineering.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">2010. - 2013</td>
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
+                                <p>Bachelor's degree studies in fields of computer engineering. Object-oriented programming, fundamentals of electrical engineering, fundamentals of electronics and digital electronics,  algorithms, databases, communication networks, etc.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">2010.</td>
+                            <td><b><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbspElektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
+                                <p>Earned a highschool degree in electrical engineering and electronics.</p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="eduDate">2006. - 2010</td>
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspElektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
+                                <p>Fundamentals of electrical engineering and electronics, digital electronics, communications, electrical machines, AutoCAD, etc.</p>
+                            </td>
+                        </tr>
+                    </table>
+
                 </div>
 
-                <div class="col-lg-7 noPadding">
-                    <h4 class="centered">Skills and knowledge</h4>
-                    <div class="bs-glyphicons">
-                        <ul class="bs-glyphicons-list" id="skills_boxes">
-                            <li onclick="window.location='./skills.html#box_C_Cpp'">
-                                <h4 class="skillsContainer">C/C++</h4>
-                            </li>
+                <div class="col-lg-6">
+                    <h4> class="centered">Work experience</h4>
 
-                            <li onclick="window.location='./skills.html#box_Csharp'">
-                                <h4 class="skillsContainer">C#</h4>
-                            </li>
+                    <table class="expTable pull-left">
+                        <tr>
+                            <td class="expDate">January 2015. - present</td>
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspImagine Cup</b><hr class="noPadding" />
+                                <p>Project: Easy Learn. Frontend development and graphics design. ASP .NET MVC, HTML and CSS in Visual Studio 2013. and Adobe Photoshop.</p>
+                            </td>
+                        </tr>
 
-                            <li onclick="window.location='./skills.html#box_HTML_CSS'">
-                                <h4 class="skillsContainer">HTML</h4>
-                            </li>
+                        <tr>
+                            <td class="expDate">November 2014. - present</td>
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspSoftware Startup Academy 2014. / 2015.</b><hr class="noPadding" />
+                                <p>Project: Foodly. Frontend development, Backend development, HTML, CSS, Javascript, JQuery, PHP, MySQL, C# and graphical design. Website and desktop app. Visual Studio 2013., Microsoft Expression Web and Adobe Photoshop.</p>
+                            </td>
+                        </tr>
 
-                            <li onclick="window.location='./skills.html#box_HTML_CSS'">
-                                <h4 class="skillsContainer">CSS</h4>
-                            </li>
+                        <tr>
+                            <td class="expDate">February 2013. - April 2013.</td>
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspSoftware Startup Academy 2013. / 2014.</b>
+                                <hr class="noPadding" />
+                                <p>UI design and graphic design using Java, Swing and Adobe Photoshop.</p>
+                            </td>
+                        </tr>
 
-                            <li onclick="window.location='./skills.html#box_JS_JQ'">
-                                <h4 class="skillsContainer">JS</h4>
-                            </li>
+                        <tr>
+                            <td class="expDate">2009. - 2012.</td>
+                            <td><b><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbspJamie Mallender</b><hr class="noPadding" />
+                                <p>Graphic design in Adobe Photoshop - CD cover, posters, promo materials, logos, etc.</p>
+                            </td>
+                        </tr>
 
-                            <li onclick="window.location='./skills.html#box_JS_JQ'">
-                                <h4 class="skillsContainer">JQuery</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#PHP_lang'">
-                                <h4 class="skillsContainer">PHP</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#MySQL_DB'">
-                                <h4 class="skillsContainer">MySQL</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#Matlab'">
-                                <h5 class="skillsContainer">Matlab</h5>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#ASP_MVC'">
-                                <h4 class="skillsContainerTwoRow">ASP .NET MVC</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#programming_related'">
-                                <h4 class="skillsContainerTwoRow">Graphic design</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#programming_related'">
-                                <h5 class="skillsContainer">Wireframing</h5>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#programming_related'">
-                                <h5 class="skillsContainer">Github / SVN</h5>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#technical_skills'">
-                                <h4 class="skillsContainer">Robotics</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#technical_skills'">
-                                <h4 class="skillsContainerTwoRow">Computer vision</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#technical_skills'">
-                                <h4 class="skillsContainerTwoRow">Game design</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#technical_skills'">
-                                <h4 class="skillsContainer">VHDL</h4>
-                            </li>
-
-                            <li onclick="window.location='./skills.html#technical_skills'">
-                                <h4 class="skillsContainer">Step 7</h4>
-                            </li>
-                            <li onclick="window.location='./skills.html'">
-                                <h4 class="skillsContainer">. . .</h4>
-                            </li>
-
-                        </ul>
-                    </div>
+                        <tr>
+                            <td class="expDate">2008. - 2010</td>
+                            <td><b><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>&nbspSvijet Računala d.o.o.</b><hr class="noPadding" />
+                                <p>Fixing computer hardware and software issues, computer maintenance, OS install, computer building, etc.</p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -281,7 +284,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                                                                                                                                                                                                                ================================================== -->
+                                                                                                                                                                                                                                                    ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
@@ -299,7 +302,6 @@
             ga('create', 'UA-61039396-1', 'auto');
             ga('send', 'pageview');   
         </script>
-
 
     </body>
 </html>
