--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!--
+﻿    <!--
     
                                                                       ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
                                                                      ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <h4> class="centered">Work experience</h4>
+                    <h4 class="centered">Work experience</h4>
 
                     <table class="expTable pull-left">
                         <tr>
