--- a/skills.html
+++ b/skills.html
@@ -305,8 +305,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">C and C++ Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_computerVision");' role="button">C and C++ Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -329,8 +329,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">C# and .NET Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_imageToASCII");' role="button">C# and .NET Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -353,8 +353,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">HTML and CSS Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_foodlyWeb");' role="button">HTML and CSS Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -377,8 +377,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">Javascript & JQuery Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_foodlyWeb");' role="button">Javascript & JQuery Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -401,8 +401,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">PHP Projects>></a></p>
+                <div class="col-md-4"><h5>Example from my project</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_foodlyWeb");' role="button">PHP Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -424,8 +424,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">Javascript & JQuery Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_histogram");' role="button">Javascript & JQuery Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -448,8 +448,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">Matlab Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_kernelFlter");' role="button">Matlab Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -473,8 +473,8 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>Example from my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">ASP .NET MVC Projects »</a></p>
+                <div class="col-md-4"><h5>Example from my projects</h5>
+                    <p><a class="btn btn-lg btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_easyLearn");' role="button">ASP .NET MVC Project »</a></p>
                     <div>
                     </div>
                 </div>
@@ -531,7 +531,7 @@ Familiar
                     <h5>Highly profficient / Expert</h5>
                     <hr>
                     <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
-                    <p><a class="btn btn-primary" href="#" role="button">My graphic designs and projects »</a><br /><br /></p>
+                    <p><a class="btn btn-primary" onclick='window.location.replace("https://codeadrian.github.io/designs.html");' role="button">My graphic designs and projects »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
@@ -572,7 +572,7 @@ Familiar
                     <h5>Profficient</h5>
                     <hr>
                     <p class="skills-text">Robotics is one of the most complex and difficults fields that I've ever done. During my education, I've learned how to design and simulate simple robotic manipulators and simple mobile robots with control and sensor logic. I've used Matlab and custom-made Robotics Toolbox addon to design and simulate the robotic manipulator.</p>
-                    <p><a class="btn btn-default" href="#" role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
+                    <p><a class="btn btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_roboticsProjects");' role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
@@ -581,7 +581,7 @@ Familiar
                     <h5>Profficient</h5>
                     <hr>
                     <p class="skills-text">Computer Vision is also one of the most complex and difficult fields of study I've ever done. I've worked on object detection on images using SIFT and RANSAC, Edge detection using Hough Transform, 3D cameras, Histogram-based object detection, Template matching, etc.</p>
-                    <p><a class="btn btn-default" href="#" role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
+                    <p><a class="btn btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#gg_computerVision");' role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
                 </div>
             </div><!-- /.row -->
             <div class="col-lg-4">
