--- a/skills.html
+++ b/skills.html
@@ -581,7 +581,7 @@ Familiar
                     <h5>Profficient</h5>
                     <hr>
                     <p class="skills-text">Computer Vision is also one of the most complex and difficult fields of study I've ever done. I've worked on object detection on images using SIFT and RANSAC, Edge detection using Hough Transform, 3D cameras, Histogram-based object detection, Template matching, etc.</p>
-                    <p><a class="btn btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#gg_computerVision");' role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
+                    <p><a class="btn btn-default" onclick='window.location.replace("https://codeadrian.github.io/projects.html#g_computerVision");' role="button">Robotics and Computer Vision projects »</a><br /><br /></p>
                 </div>
             </div><!-- /.row -->
             <div class="col-lg-4">
