035 Updated index and CV

--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
                     <p><b>Location: </b>Laslovo (Osijek)</p>
                     <h3>Social media</h3><br/>
                 <div class="social">
-  <a href="https://www.facebook.com/adrian.bece" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
-  <a href="https://twitter.com/AdrianBDesigns" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a>
-  <a href="https://github.com/codeAdrian/" class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
-  <a href="https://hr.linkedin.com/in/adrianbece" class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
+  <a href="https://www.facebook.com/adrian.bece" target="_blank" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
+  <a href="https://twitter.com/AdrianBDesigns" target="_blank" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a>
+  <a href="https://github.com/codeAdrian/" target="_blank"  class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
+  <a href="https://hr.linkedin.com/in/adrianbece" target="_blank"  class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
 </div>
 
 </div>
@@ -92,7 +92,7 @@
                 <!-- FOOTER -->
                 <footer>
                     <hr>
-                    <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
+                <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
                     <p>© 2015 Adrian Bece </p>
                 </footer>
             </div>
