--- a/index.html
+++ b/index.html
@@ -164,28 +164,14 @@
                         </tr>
 
                         <tr>
-                            <td class="eduDate">2013.</td>
-                            <td><b><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
-                                <p>Earned a Bachelor's degree in computer engineering.</p>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td class="eduDate">2010. - 2013</td>
+                            <td class="eduDate">2010. - 2013.</td>
                             <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
                                 <p>Bachelor's degree studies in fields of computer engineering. Object-oriented programming, fundamentals of electrical engineering, fundamentals of electronics and digital electronics,  algorithms, databases, communication networks, etc.</p>
                             </td>
                         </tr>
 
                         <tr>
-                            <td class="eduDate">2010.</td>
-                            <td><b><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbspElektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
-                                <p>Earned a highschool degree in electrical engineering and electronics.</p>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td class="eduDate">2006. - 2010</td>
+                            <td class="eduDate">2006. - 2010.</td>
                             <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspElektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
                                 <p>Fundamentals of electrical engineering and electronics, digital electronics, communications, electrical machines, AutoCAD, etc.</p>
                             </td>
@@ -228,7 +214,7 @@
                         </tr>
 
                         <tr>
-                            <td class="expDate">2008. - 2010</td>
+                            <td class="expDate">2008. - 2010.</td>
                             <td><b><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>&nbspSvijet Računala d.o.o.</b><hr class="noPadding" />
                                 <p>Fixing computer hardware and software issues, computer maintenance, OS install, computer building, etc.</p>
                             </td>
@@ -259,11 +245,13 @@
 
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_cv.png" alt="CV icon" style="width: 140px; height: 140px;">
-                    <h2>My CV</h2>
+                    <h2>Documents</h2>
                     <hr>
-                    <p class="skills-text">If you'd like to view or download my CV and read about my skills, education and qualifications in more detail, you can download it in both English and Croatian language by clicking on one of the buttons below.</p>
-                    <p><a class="btn btn-primary" href="./resources/files/Bece_CV_EN.pdf" target="_blank" role="button">Download my CV (EN) »</a></p>
-                    <p> <a class="btn btn-primary" href="./resources/files/Bece_CV_CRO.pdf" target="_blank" role="button">Download my CV (CRO) »</a><br /><br /></p>
+                    <p><a href="./resources/files/Bece_CV_EN.pdf" target="_blank" role="button">Download my CV (EN) »</a></p>
+                    <p> <a href="./resources/files/Bece_CV_CRO.pdf" target="_blank" role="button">Download my CV (CRO) »</a><br /></p>
+                    <p> <a href="./resources/files/Bece_MVA.pdf" target="_blank" role="button">Microsoft Virtual Academy transcript »</a></p>
+                    <p> <a href="./resources/files/Bece_IEEE.pdf" target="_blank" role="button">IEEE membership certificate »</a><br /></p>
+                    <p> <a href="./resources/files/Bece_Xtreme.pdf" target="_blank" role="button">IEEEXtreme 6.0 certificate  »</a><br /><br /></p>
                 </div>
 
             </div><!-- /.row -->
