--- a/designs.html
+++ b/designs.html
@@ -91,7 +91,7 @@
                 <div class="col-md-9">
                     <p>Since 2009. I've been working with a British musician Jamie Mallender who previously worked with members of Black Sabbath, Tony Martin, Ravenlord, T-Rex, etc. I've created cd covers and promo materials for his 2 albums: "Return to bass" and "Tunes from the mothership" released in 2009. and 2011., respectively.</p>
                     <p>Jamie has been a great friend of mine and fellow music-buff ever since we started working together. He gave me the job that kickstarted my interest in graphic design and I've kept honing my skills ever since. You can check out his albums and music by clicking on the buttons below.</p><br />
-                    <p><a class="btn btn-default" href="https://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp&nbsp&nbsp&nbsp<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
+                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp&nbsp&nbsp&nbsp<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
                 </div>
             </div>
             <hr />
