037 Minor content update

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                             </li>
 
                             <li>
-                                <span class="glyphicon glyphicon-ice-lolly" aria-hidden="true"></span> <!-- ice lolly looks like a paddle-->
-                                <span class="glyphicon-class">Playing table tennis</span>
+                                <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+                                <span class="glyphicon-class">PC gaming</span>
                             </li>
                         </ul>
                     </div>
