--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                             <li>
                                 <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                <span class="glyphicon-class">Graphical design</span>
+                                <span class="glyphicon-class">Graphics design</span>
                             </li>
 
                             <li>
