040 Updated CV and fixed some minor bugs

--- a/index.html
+++ b/index.html
@@ -136,41 +136,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="container-full container-circles container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_skills.png" alt="Skills icon" style="width: 140px; height: 140px;">
-                    <h2>My skills</h2>
-                    <hr>
-                    <p class="skills-text">I am mainly interested in frontend development, but I am also interested in backend development and graphics design. I am a developer by profession and a designer by passion. You can read about my skills and knowledge span in more detail by clicking on the button below.</p>
-                    <p><a class="btn btn-primary" href="./skills.html" role="button">Read about my skills »</a><br /><br /></p>
-                </div>
-
-                <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_portfolio.png" alt="Portfolio icon" style="width: 140px; height: 140px;">
-                    <h2>My projects</h2>
-                    <hr>
-                    <p class="skills-text">I've uploaded some of my projects that showcase my work on Github with full source files available. You can read about my projects in more detail, view the screenshots and download source files by clicking on the button below.</p>
-                    <p><a class="btn btn-primary" href="./projects.html" role="button">Check out my projects »</a><br /><br /></p>
-                </div>
-
-                <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_cv.png" alt="CV icon" style="width: 140px; height: 140px;">
-                    <h2>Documents</h2>
-                    <hr>
-                    <p><a href="./resources/files/Bece_CV_EN.pdf" target="_blank" role="button">Download my CV (EN) »</a></p>
-                    <p> <a href="./resources/files/Bece_CV_CRO.pdf" target="_blank" role="button">Download my CV (CRO) »</a><br /></p>
-                    <p> <a href="./resources/files/Bece_MVA.pdf" target="_blank" role="button">Microsoft Virtual Academy transcript »</a></p>
-                    <p> <a href="./resources/files/Bece_IEEE.pdf" target="_blank" role="button">IEEE membership certificate »</a><br /></p>
-                    <p> <a href="./resources/files/Bece_Xtreme.pdf" target="_blank" role="button">IEEEXtreme 6.0 certificate  »</a><br /><br /></p>
-                </div>
-
-            </div><!-- /.row -->
-        </div>
-
-
-        <div class="container-full container-blue">
+        <div class="container-full container-gray">
             <div class="row">
                 <div class="col-lg-6 eduSkills">
                     <h4 class="centered">Education</h4>
@@ -211,6 +177,7 @@
                             </td>
                         </tr>
                     </table>
+
                 </div>
 
                 <div class="col-lg-6">
@@ -256,6 +223,40 @@
                 </div>
             </div>
         </div>
+        <div class="container-full container-circles container">
+            <h1>Portfolio of my work</h1>
+            <br />
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_skills.png" alt="Skills icon" style="width: 140px; height: 140px;">
+                    <h2>My skills</h2>
+                    <hr>
+                    <p class="skills-text">I am mainly interested in frontend development, but I am also interested in backend development and graphics design. I am a developer by profession and a designer by passion. You can read about my skills and knowledge span in more detail by clicking on the button below.</p>
+                    <p><a class="btn btn-primary" href="./skills.html" role="button">Read about my skills »</a><br /><br /></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_portfolio.png" alt="Portfolio icon" style="width: 140px; height: 140px;">
+                    <h2>My projects</h2>
+                    <hr>
+                    <p class="skills-text">I've uploaded some of my projects that showcase my work on Github with full source files available. You can read about my projects in more detail, view the screenshots and download source files by clicking on the button below.</p>
+                    <p><a class="btn btn-primary" href="./projects.html" role="button">Check out my projects »</a><br /><br /></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_cv.png" alt="CV icon" style="width: 140px; height: 140px;">
+                    <h2>Documents</h2>
+                    <hr>
+                    <p><a href="./resources/files/Bece_CV_EN.pdf" target="_blank" role="button">Download my CV (EN) »</a></p>
+                    <p> <a href="./resources/files/Bece_CV_CRO.pdf" target="_blank" role="button">Download my CV (CRO) »</a><br /></p>
+                    <p> <a href="./resources/files/Bece_MVA.pdf" target="_blank" role="button">Microsoft Virtual Academy transcript »</a></p>
+                    <p> <a href="./resources/files/Bece_IEEE.pdf" target="_blank" role="button">IEEE membership certificate »</a><br /></p>
+                    <p> <a href="./resources/files/Bece_Xtreme.pdf" target="_blank" role="button">IEEEXtreme 6.0 certificate  »</a><br /><br /></p>
+                </div>
+
+            </div><!-- /.row -->
+        </div>
+
         <!-- Marketing messaging and featurettes ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
